Fix project gallery lag on horizontal scroll

--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -11,6 +11,7 @@
 
 .project-img-container {
 	overflow-x: scroll;
+	-webkit-overflow-scrolling: touch;
 	width: 100%;
 	white-space: nowrap;
 	
